--- a/src/data/data_projects.json
+++ b/src/data/data_projects.json
@@ -1,48 +1,37 @@
 [
     {
         "id": 0,
-        "num_tutorial": "",
-        "name": "",
-        "desc_card": "",
-        "image": "",
-        "recommendations": "",
-        "aims_tutorial": "",
-        "tutorials": [
-            {
-                "id": 0,
-                "img_tutorial": "",
-                "title": "",
-                "desc": "",
-                "video_url": ""
-            },
-            {
-                "id": 1,
-                "img_tutorial": "",
-                "title": "",
-                "desc": "",
-                "video_url": ""
-            },
-            {
-                "id": 2,
-                "img_tutorial": "",
-                "title": "",
-                "desc": "",
-                "video_url": ""
-            },
-            {
-                "id": 3,
-                "img_tutorial": "",
-                "title": "",
-                "desc": "",
-                "video_url": ""
-            },
-            {
-                "id": 4,
-                "img_tutorial": "",
-                "title": "",
-                "desc": "",
-                "video_url": ""
-            }
-        ]
+        "title": "🧭LUCAS 2022",
+        "link": "https://junglekiosk.github.io/Eurostat_LUCASproject_2022/"
+    },
+    {
+        "id": 1,
+        "num_tutorial": "🌳Forest Suitability",
+        "link": "https://junglekiosk.github.io/QGIS_forest_suitability/"
+    },
+    {
+        "id": 2,
+        "num_tutorial": "🛰️NDVI & CIgreen",
+        "link": "https://junglekiosk.github.io/QGIS_RS_NDVI_CIgreen/"
+    },
+    {
+        "id": 3,
+        "num_tutorial": "♨️Soil Degradation",
+        "link": "https://junglekiosk.github.io/QGIS_SoilDegradation/"
+    },
+    {
+        "id": 4,
+        "num_tutorial": "🌰Chestnut Zoning",
+        "link": "https://junglekiosk.github.io/QGIS_zoning/"
+    },
+    {
+        "id": 5,
+        "num_tutorial": "⛏️Soil Texture map",
+        "link": "https://junglekiosk.github.io/QGIS_SoilTexture/"
+    },
+    {
+        "id": 6,
+        "num_tutorial": "💧FREEWAT-Q3",
+        "link": "https://junglekiosk.github.io/Freewat_GettingStarted/getstart"
     }
 ]
