--- a/src/data/data_projects.json
+++ b/src/data/data_projects.json
@@ -43,5 +43,10 @@
         "id": 8,
         "num_tutorial": "🌻PySonneblume",
         "link": "https://github.com/JungleKiosk/sonneblume/blob/main/sonneblume.ipynb"
+    },
+    {
+        "id": 9,
+        "num_tutorial": "🍃VueLeaflet",
+        "link": "https://junglekiosk.github.io/VueLeaflet/"
     }
 ]
