--- a/src/data/data_projects.json
+++ b/src/data/data_projects.json
@@ -32,7 +32,7 @@
     {
         "id": 6,
         "num_tutorial": "🌊 Hydro QGIS & GRASS",
-        "link": "https://junglekiosk.github.io/Freewat_GettingStarted/"
+        "link": "https://www.youtube.com/playlist?list=PLXUPdtoR2ulhJICR6vWhyu6jiJQ1SsTzR"
     },
     {
         "id": 7,
