--- a/src/data/data_projects.json
+++ b/src/data/data_projects.json
@@ -41,8 +41,8 @@
     },
     {
         "id": 8,
-        "num_tutorial": "🌻PySonneblume",
-        "link": "https://github.com/JungleKiosk/sonneblume/blob/main/sonneblume.ipynb"
+        "num_tutorial": "♻️bioNRG",
+        "link": "https://junglekiosk.github.io/dNRG/"
     },
     {
         "id": 9,
