--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "vue": "^3.4.29",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
